# rocket-api

./: Cargo.toml  Dockerfile  Rocket.toml  build.sh  docker-compose.yaml  serve-db.yaml  serve-dev.sh
migrations/2022-07-06-220006_create_file/: up.sql
src/: db_connect.rs  main.rs  paste_id.rs  schema.rs
src/entities/files/: file.rs
